--- a/public/base.html
+++ b/public/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>♩FAVE♩</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
-    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="shortcut icon" href="/public/favicon.ico">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                     <div id="navbarMenuHeroA" class="navbar-menu">
                         <div class="navbar-end">
                             {% if not current_user.is_authenticated %}
-                            <a href="{{ url_for('index') }}" class="navbar-item">
+                            <a href="{{ url_for('home') }}" class="navbar-item">
                                 Home
                             </a>
                             <a href="{{ url_for('login') }}" class="navbar-item">
@@ -31,7 +31,7 @@
                             </a>
                             {% endif %}
                             {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('toptrack') }}" class="navbar-item">
+                            <a href="{{ url_for('bp.index') }}" class="navbar-item">
                                 Home
                             </a>
                             <a href="{{ url_for('profile') }}" class="navbar-item">
